tests/expectations/parser-expression/expression/circuit_init_fail.out
Error [EPAR0370009]: unexpected string: expected 'identifier', found '<eof>'
    --> test_0:1:3
     |
   1 | x {
     |   ^
Error [EPAR0370005]: expected <eof> -- found '}'
    --> test_1:1:3
     |
   1 | x }
     |   ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test_2:1:4
     |
   1 | x {,}
     |    ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test_3:1:5
     |
   1 | x { , }
     |     ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test_4:1:4
     |
   1 | x {,,,}
     |    ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test_5:1:6
     |
   1 | x {x,,}
     |      ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test_6:1:4
     |
   1 | x {,,x}
     |    ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test_7:1:4
     |
   1 | x {,x}
     |    ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test_8:1:8
     |
   1 | x {x:y,,}
     |        ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test_9:1:4
     |
   1 | x {,,x:y}
     |    ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test_10:1:4
     |
   1 | x {,x:y}
     |    ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '}'
    --> test_11:1:6
     |
   1 | x {x:}
     |      ^
